# KiwiWaves

./: .gitignore  CMakeLists.txt  README.md
include/: Balance.h  Butterworth.h  Comb.h  Delay.h  Envelopes.h  ExternalUGen.h  FourierTab.h  FuncTab.h  Iir.h  KiwiWaves.h  Osc.h  Phasor.h  Reson.h  Rms.h  SegmentEnv.h  TableRead.h  Tone.h  UGen.h
src/: Balance.cpp  Butterworth.cpp  Delay.cpp  FourierTab.cpp  FuncTab.cpp  Iir.cpp  Osc.cpp  Phasor.cpp  Reson.cpp  Rms.cpp  SegmentEnv.cpp  TableRead.cpp  Tone.cpp  UGen.cpp
